--- a/mou/GitHub2.css
+++ b/mou/GitHub2.css
@@ -144,7 +144,8 @@ dl {
 blockquote {
   border-left: 4px solid #dddddd;
   padding: 0 15px;
-  color: #777777; }
+  color: #777777; 
+  font-weight: bold; }
   blockquote > :first-child {
     margin-top: 0; }
   blockquote > :last-child {
