--- a/safari/safari-reader.css
+++ b/safari/safari-reader.css
@@ -1,14 +1,14 @@
 html body.sepia #article {
-    box-shadow: 0px 6px 12px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 6px 12px 3px rgba(0, 0, 0, 0.4);
 }
 
 html #article {
     min-height: 100%;
-    margin: 25px auto 0 auto;
+    margin: 40px auto 40px auto;
 }
 
 #article {
-    width: 1040px;
+    width: 1000px;
     background-color: #f5f5f5 !important;
 }
 
@@ -18,4 +18,11 @@ html #article {
 }
 .pingfangsc {
     font-family: 'PingFang SC'; 
+}
+
+p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    text-indent: 0px;
+    text-align: start;
 }
